--- a/Aulas/cantor/index.html
+++ b/Aulas/cantor/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="cantor.php" method="post">
+    <form action="cantor.php" method="post" class="container">
         <div>
-           <h2>Gosto musical</h2>
-            <label for="nacionalidade">Eu gosto de:</label>
-            <br>
+            <h2>Gosto Musical</h2>
+        </div>
+        <div> 
+            <label for="nacionalidade">Eu gosto de:</label> 
+        </div>
+        <div class="elementos">
             <input type="radio" name="nacionalidade" value="nacional">Música nacional
-            <input type="radio" name="nacionalidade" value="internacional">Música internacional 
+            <input type="radio" name="nacionalidade" value="internacional">Música internacional
         </div>
         
         <div>
             <label for="tipo">Eu prefiro:</label>
-            <br>
+        </div>
+        <div class="elementos">
             <input type="radio" name="tipo" value="banda">Banda
             <input type="radio" name="tipo" value="cantor">Cantor
             <input type="radio" name="tipo" value="cantora">Cantora
@@ -25,14 +30,16 @@
 
         <div>
             <label for="estilo">Os estilos musicais que eu curto são:</label>
-            <br>
-            <input type="checkbox" name="estilo" value="rock">Rock
-            <input type="checkbox" name="estilo" value="mpb">MPB
-            <input type="checkbox" name="estilo" value="jazz">Jazz
-            <input type="checkbox" name="estilo" value="rap">Rap
         </div>
-    
-        <button>Que artista eu posso gostar?</button>
+        <div class="elementos">
+            <input type="checkbox" name="estilo[]" value="rock">Rock
+            <input type="checkbox" name="estilo[]" value="mpb">MPB
+            <input type="checkbox" name="estilo[]" value="jazz">Jazz
+            <input type="checkbox" name="estilo[]" value="rap">Rap
+        </div>
+        <div>
+            <button>Que artista eu posso gostar?</button>
+        </div>
     </form>
 </body>
 </html>
